--- a/src/app/pages/accounts/accounts.component.css
+++ b/src/app/pages/accounts/accounts.component.css
@@ -265,7 +265,22 @@ line-height: 1.4 !important;
     padding-left: 0px !important;
 }
 }
-
+@media only screen and (max-width:374px) and (min-width:100px){
+  .top-left h2{
+    font-size: 15px !important;  
+    padding-top: 5px !important;
+    margin-top: 20px !important;
+    margin-left: 10px !important;
+    padding-left: 15px !important;
+    text-align: center;
+    line-height: 1 !important;
+}
+.top-left h4{
+    font-size: 12px !important;
+    margin-left: 50px !important;
+    padding-left: 0px !important;
+}
+}
 
 .teamimg {
   width: 1100px;
