--- a/src/app/pages/corporate/corporate.component.css
+++ b/src/app/pages/corporate/corporate.component.css
@@ -17,21 +17,7 @@
   line-height: 1.2 !important;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold';
 }
-/* @media only screen and (max-width:1300px){
-  .top-left h2{
-      font-size: 14px;
-      left: 10%;
-      text-align: center;
-    
-      padding-top: 20%;
-      line-height: normal;
-  }
-  .top-left h4{
-      font-size: 10px;
-      margin-top: 0%;
-      line-height: normal;
-  }
-} */
+
 
 @media only screen  and (max-width:1341px) and (min-width:1291px){
   .top-left h2{
@@ -280,7 +266,22 @@ line-height: 1.4 !important;
     padding-left: 0px !important;
 }
 }
-
+@media only screen and (max-width:374px) and (min-width:100px){
+  .top-left h2{
+    font-size: 15px !important;  
+    padding-top: 5px !important;
+    margin-top: 20px !important;
+    margin-left: 10px !important;
+    padding-left: 15px !important;
+    text-align: center;
+    line-height: 1 !important;
+}
+.top-left h4{
+    font-size: 12px !important;
+    margin-left: 50px !important;
+    padding-left: 0px !important;
+}
+}
 .teamimg {
   width: 1100px;
   height: 300px;
