--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -222,7 +222,7 @@
             <div class="box-content">
                 <h4 class="title">CA. Ankit Jaisinghani </h4>
                 <p class="description">
-                    Ankit is an Associate member of the Institute of Chartered Accountants of India (ICAI) since 2015 with more than 5 years of experience working extensively in Auditing, Taxation and Corporate Law matters. <br><a routerLink="/ankit" style="color: black;" >Read More</a>
+                    Ankit is an Associate member of the Institute of Chartered Accountants of India (ICAI) since 2015 with more than 5 years of experience working extensively in Auditing, Taxation and Corporate Law matters. <br><a href="/ankit" style="color: black;" >Read More</a>
                 </p>
                 <div class="team-social">
                     <a class="fb" href="https://www.facebook.com/ankit.jaisinghani"><i class="fa fa-facebook"></i></a>
@@ -247,7 +247,7 @@
             <div class="box-content">
                 <h4 class="title">CA. Sachin Jain</h4>
                 <p class="description">
-                    Sachin is an Associate member of the Institute of Chartered Accountants of India (ICAI) since 2015 with more than 5 years of experience working extensively in finance sector.<br><br><a routerLink="/sachin" style="color: black;">Read More</a>
+                    Sachin is an Associate member of the Institute of Chartered Accountants of India (ICAI) since 2015 with more than 5 years of experience working extensively in finance sector.<br><br><a href="/sachin" style="color: black;">Read More</a>
                 </p>
                 <div class="team-social">
                     <a class="fb" href="https://www.facebook.com/jsachin19  "><i class="fa fa-facebook"></i></a>
@@ -298,7 +298,7 @@
                             </ul>
                        
                     </div>
-                    <a class="read-more" routerLink="/audit">Read More</a>
+                    <a class="read-more" href="/audit">Read More</a>
                 </div>
               </div>
               <div class="col-md-4 col-sm-6">
@@ -314,7 +314,7 @@
                             <li style="float: left;">TDS/TCS consultancy</li><br><br>  
                         </ul>
                     </div>
-                    <a class="read-more" routerLink="/taxation">Read More</a>
+                    <a class="read-more" href="/taxation">Read More</a>
                 </div>
               </div>
               <div class="col-md-4 col-sm-6">
@@ -330,7 +330,7 @@
                            <li style="float: left;">Business and Share Valuation</li><br><br>
                         </ul>
                     </div>
-                    <a class="read-more" routerLink="/corporate">Read More</a>
+                    <a class="read-more" href="/corporate">Read More</a>
                 </div>
               </div>
               <div class="col-md-4 col-sm-6">
@@ -346,7 +346,7 @@
                            <li style="float: left;">ERP implementation support</li><br>
                         </ul>
                     </div>
-                    <a class="read-more" routerLink="/management">Read More</a>
+                    <a class="read-more" href="/management">Read More</a>
                 </div>
               </div>
               <div class="col-md-4 col-sm-6">
@@ -362,7 +362,7 @@
                            <li style="float: left;">RERA Advisory</li><br>
                         </ul>
                     </div>
-                    <a class="read-more" routerLink="/accounts">Read More</a>
+                    <a class="read-more" href="/accounts">Read More</a>
                 </div>
               </div>
               <div class="col-md-4 col-sm-6">
@@ -379,7 +379,7 @@
                         <li style="float: left;">Virtual CFO</li><br>
                         </ul>
                     </div>
-                    <a class="read-more" routerLink="/startup">Read More</a>
+                    <a class="read-more" href="/startup">Read More</a>
                 </div>
               </div>
              
@@ -397,7 +397,7 @@
        
              <div class="col-md-12 heading">
                     <span class="title-icon classic float-left"><i class="fa fa-user"></i></span>
-                    <h2 class="title classic"><a routerLink="/industry"> Industries We Serve</a></h2>
+                    <h2 class="title classic"><a href="/industry" style="color: black;"> Industries We Serve</a></h2>
                </div>
                 <div class="row wow fadeInLeft">
                     <div id="client-carousel" class="col-sm-12 owl-carousel owl-theme text-center client-carousel">
